syntax = "proto3";

option csharp_namespace = "DiscountGrpc";


package discount;

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (GetListCoupon);
	rpc CreateDiscount (CreateDiscountRequest) returns (CouponModel);
	rpc UpdateDiscount (UpdateDiscountRequest) returns (CouponModel);
	rpc DeleteDiscount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string foodId = 1;
}

message CouponModel {
	int32 id = 1;
	string foodId = 2;
	string description = 3;
	int32 amount = 4;
}

message GetListCoupon {
    repeated CouponModel coupons = 1;
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}